--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
-version: "3"
-
 services:
   postgres:
     build:
       context: postgres/
     container_name: "postgres"
-    ports:
-      - "5432:5432"
+    networks:
+      - pong
     # volumes:
     #   - postgres_data:/var/lib/postgresql/data
 
@@ -14,18 +12,20 @@ services:
     build:
       context: web/
     container_name: "web"
-    ports:
-      - "8080:8080"
+    networks:
+      - pong
     # volumes:
     #   - web_data:/var/www/html
 
   nginx:
     build:
-      context: web/
+      context: nginx/
     container_name: "nginx"
     ports:
       - "80:80"
       - "443:443"
+    networks:
+      - pong
     # volumes:
     #   - nginx.conf:/etc/nginx/nginx.conf
     #   - certs:/etc/nginx/certs
@@ -34,11 +34,17 @@ services:
     build:
       context: api/
     container_name: "api"
-    ports:
-      - "8000:8000"
+    networks:
+      - pong
+
+
+networks:
+  pong:
+    name: "pong"
 
 # volumes:
 #   postgres_data:
 #   web_data:
 #   nginx.conf:
 #   certs:
+
