add db container for development

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -4,18 +4,25 @@
 # 軽そうなbaseイメージを選択(https://hub.docker.com/_/python)
 FROM python:3.9-slim AS base
 
-## softのバージョンを指定
+# softのバージョンを指定
 ENV PSYCOPG_VERSION 3.1.8
 ENV DJANGO_VERSION 4.2
 
 RUN apt-get update
+# 必要なソフト(bainary)をインストール
+## gcc: psycopgのインストールに必要
+## libpq-dev: psycopgの動作に必要
 RUN apt-get -y install \
-    gcc
+    gcc \
+    libpq-dev
+
 ## install for Debug
 RUN apt-get -y install \
     vim \
     curl \
-    lsof
+    lsof \
+    tree
+
 ## clean up to reduce the size of the image
 RUN rm -rf /var/lib/apt/lists/*
 
@@ -35,9 +42,12 @@ FROM base AS development_djangoserver
 RUN django-admin startproject ft_transcendence
 WORKDIR /ft_transcendence
 
-CMD ["sleep", "infinity"]
-# CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+## 必要なファイルをコピー
+COPY tool/update_db_section.py .
+RUN python update_db_section.py
+RUN rm update_db_section.py
 
+CMD ["sleep", "infinity"]
 
 ##########################
 # development_asgi stage #
