--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -10,6 +10,10 @@ services:
       - "8000:8000"
     networks:
       - pong_network
+    depends_on:
+      db:
+        condition: service_healthy
+
 
   db:
     image: postgres:latest
@@ -21,6 +25,10 @@ services:
       POSTGRES_PASSWORD: pass
     networks:
       - pong_network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U pong_user"]
+      interval: 15s
+      retries: 5
 
 volumes:
   postgres_data:
