fix ports of rdbms. ports -> expose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432"
     networks:
       - net_pong
 
@@ -30,6 +30,8 @@ services:
     build:
       context: api/
     container_name: "api"
+    expose:
+      - "8000"
     networks:
       - net_pong
 
