--- a/api/Makefile
+++ b/api/Makefile
@@ -1,17 +1,20 @@
-.PHONY: up down ps
+.PHONY: up down ps build re cre
 
 # docker-compose.ymlがあるディレクトリのパス
-DOCKER_COMPOSE_DIR = .
-DOCKER_COMPOSE_FILE = $(DOCKER_COMPOSE_DIR)/docker-compose.yml
+DOCKER_COMPOSE_DIR = ./dev/
+DOCKER_COMPOSE_FILE = $(DOCKER_COMPOSE_DIR)docker-compose.yml
+
+# envファイルのPATH
+ENV_FILE = $(DOCKER_COMPOSE_DIR).env.sample
 
 up: build
-	docker compose --env-file .env.sample -f $(DOCKER_COMPOSE_FILE) up -d
+	docker compose --env-file $(ENV_FILE) -f $(DOCKER_COMPOSE_FILE) up -d
 
 down:
-	docker compose --env-file .env.sample -f $(DOCKER_COMPOSE_FILE) down
+	docker compose --env-file $(ENV_FILE) -f $(DOCKER_COMPOSE_FILE) down
 
 vdown:
-	docker compose --env-file .env.sample -f $(DOCKER_COMPOSE_FILE) down -v
+	docker compose --env-file $(ENV_FILE) -f $(DOCKER_COMPOSE_FILE) down -v
 
 # 古いイメージを削除
 image-prune:
@@ -19,7 +22,7 @@ image-prune:
 
 # cacheを使わずにビルド
 build:
-	docker compose --env-file .env.sample -f $(DOCKER_COMPOSE_FILE) build --no-cache
+	docker compose --env-file $(ENV_FILE) -f $(DOCKER_COMPOSE_FILE) build --no-cache
 
 # ボリュームを削除しないので、DBのデータが残る
 re:	down image-prune up
