--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,13 @@ services:
     build:
       context: reverseproxy/
     container_name: "reverseproxy"
+    image: nginx:1.26.1-alpine
     ports:
       - "80:80"
       - "443:443"
+    volumes:
+      # TODO mount ssl/tls certificate volume
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     networks:
       - net_pong
 
@@ -42,4 +46,3 @@ volumes:
     name: "vol_reverseproxy"
   vol_rdbms:
     name: "vol_rdbms"
-
