update docker compose for web

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -14,9 +14,13 @@ services:
   static-builder:
     build:
       context: static-builder/
+      target: development
     container_name: "static-builder"
     ports:
       - "5173:5173"
+    volumes:
+      - ./:/usr/src/vite
+    entrypoint: ["sh", "-c", "pnpm config set store-dir /tmp/pnpm/store && pnpm install --frozen-lockfile && pnpm dev"]
 
   reverseproxy:
     build:
@@ -47,6 +51,3 @@ volumes:
     name: "vol_reverseproxy"
   vol_rdbms:
     name: "vol_rdbms"
-
-
-
