--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -29,9 +29,11 @@ services:
     build:
       context: reverseproxy/
     container_name: "reverseproxy"
+    image: nginx:1.26.1-alpine
     ports:
       - "80:80"
-      - "443:443"
+    volumes:
+      - ./nginx/nginx.local.conf:/etc/nginx/nginx.conf
     networks:
       - net_pong
 
