fix docker compose

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -26,7 +26,7 @@ services:
     ports:
       - "5173:5173"
     volumes:
-      - ./:/usr/src/vite
+      - ./static-builder:/usr/src/vite
     entrypoint: ["sh", "-c", "pnpm config set store-dir /tmp/pnpm/store && pnpm install --frozen-lockfile && pnpm dev"]
 
   reverseproxy:
