--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -21,9 +21,13 @@ services:
   static-builder:
     build:
       context: static-builder/
+      target: development
     container_name: "static-builder"
     ports:
       - "5173:5173"
+    volumes:
+      - ./static-builder:/usr/src/vite
+    entrypoint: ["sh", "-c", "pnpm config set store-dir /tmp/pnpm/store && pnpm install --frozen-lockfile && pnpm dev"]
 
   reverseproxy:
     build:
