--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,10 @@ services:
   static-builder:
     build:
       context: static-builder/
+      target: build
     container_name: "static-builder"
+    volumes:
+      - vol_static_builder:/usr/src/vite
 
   reverseproxy:
     build:
@@ -36,7 +39,8 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     networks:
       - net_pong
-
+    volumes:
+      - vol_static_builder:/var/www/html
   api:
     build:
       context: api/
@@ -55,3 +59,5 @@ volumes:
     name: "vol_reverseproxy"
   vol_rdbms:
     name: "vol_rdbms"
+  vol_static_builder:
+    name: "vol_static_builder"
