--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,15 @@
+#############
+# API SETUP #
+#############
+## Django superuser
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_EMAIL=admin@example.com
+DJANGO_SUPERUSER_PASSWORD=pass
+
+
+###############
+# RDBMS SETUP #
+###############
 POSTGRES_DB=my_database
 POSTGRES_USER=my_user
 POSTGRES_PASSWORD=my_password
