--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,6 @@ services:
       - vol_static_builder:/usr/src/vite
 
   reverseproxy:
-    build:
-      context: reverseproxy/
     container_name: "reverseproxy"
     image: nginx:1.26.1-alpine
     ports:
@@ -39,8 +37,13 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     networks:
       - net_pong
-    volumes:
-      - vol_static_builder:/var/www/html
+    # depends_on:
+    #   api:
+    #     condition: service_healthy
+    #   static-builder:
+    #     condition: service_healthy
+    #   rdbms:
+    #     condition: service_healthy
 
   api:
     build:
@@ -71,8 +74,6 @@ networks:
     name: "net_pong"
 
 volumes:
-  vol_reverseproxy:
-    name: "vol_reverseproxy"
   vol_rdbms:
     name: "vol_rdbms"
   vol_static_builder:
