--- a/static-builder/docker-compose.yml
+++ b/static-builder/docker-compose.yml
@@ -2,7 +2,7 @@
 
 services:
   web:
-    container_name: web
+    container_name: static-builder
     build:
       context: ./
       target: development
