--- a/reverseproxy/nginx.conf
+++ b/reverseproxy/nginx.conf
@@ -1,8 +1,20 @@
+worker_processes 1;
+
+user nobody nogroup;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
+
 events {
     worker_connections 1024;
 }
 
 http {
+    server_tokens off; # version情報を隠蔽
+    include mime.types;
+    default_type application/octet-stream;
+    access_log /var/log/nginx/access.log combinedi flush=5s; #5秒ごとに出力
+    sendfile on;
+
     upstream frontend {
         server web:5173;
     }
@@ -13,10 +25,8 @@ http {
 
     server {
         listen 443 ssl;
-
-        ssl_certificate /etc/ssl/certs/ca-certificates.pem
-        ssl_certificate_key /etc/ssl/private/ca-certificates.pem
-
+        ssl_certificate /etc/ssl/certs/ca-certificates.pem;
+        ssl_certificate_key /etc/ssl/private/ca-certificates.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
@@ -34,12 +44,18 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering off; #リアルタイム性を重視するためbufの中止
+            proxy_ignore_client_abort on; #切断対策
         }
+
+        location ~ /\.$ {
+            deny all;
+        }
+
     }
-    
+
     server {
         listen 80;
-
         return 301 https://$host$request_uri;
     }
 }
