証明書の作成の追加

--- a/.env.sample
+++ b/.env.sample
@@ -13,3 +13,14 @@ DJANGO_SUPERUSER_PASSWORD=pass
 POSTGRES_DB=my_database
 POSTGRES_USER=my_user
 POSTGRES_PASSWORD=my_password
+
+
+##############
+# CERT SETUP #
+##############
+CSR_COUNTRY=JP
+CSR_STATE=Tokyo
+CSR_LOCALITY=Sinjyuku
+CSR_ORGANIZATION=Company
+CSR_ORGANIZATIONAL_UNIT=Department
+CSR_COMMON_NAME=localhost
