--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      # TODO mount ssl/tls certificate volume
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./reverseproxy/ssl/:/etc/ssl/
+      - ./reverseproxy/nginx.conf:/etc/nginx/nginx.conf
     networks:
       - net_pong
     # depends_on:
