--- a/reverseproxy/nginx.conf
+++ b/reverseproxy/nginx.conf
@@ -25,8 +25,8 @@ http {
 
     server {
         listen 443 ssl;
-        ssl_certificate /etc/ssl/certs/ca-certificates.pem;
-        ssl_certificate_key /etc/ssl/private/ca-certificates.pem;
+        ssl_certificate /etc/ssl/ft_transcendence.crt
+        ssl_certificate_key /etc/ssl/ft_transcendence.key
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
