fix: nginx.conf

--- a/reverseproxy/nginx.conf
+++ b/reverseproxy/nginx.conf
@@ -12,7 +12,7 @@ http {
     server_tokens off; # version情報を隠蔽
     include mime.types;
     default_type application/octet-stream;
-    access_log /var/log/nginx/access.log combinedi flush=5s; #5秒ごとに出力
+    access_log /var/log/nginx/access.log combined flush=5s  buffer=32k; #5秒ごとに出力
     sendfile on;
 
     upstream frontend {
