--- a/reverseproxy/nginx.conf
+++ b/reverseproxy/nginx.conf
@@ -16,7 +16,7 @@ http {
     sendfile on;
 
     upstream frontend {
-        server web:5173;
+        server static-builder:5173;
     }
 
     upstream backend {
