--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - "443:443"
     volumes:
       # TODO mount ssl/tls certificate volume
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./reverseproxy/nginx.conf:/etc/nginx/nginx.conf
     networks:
       - net_pong
     # depends_on:
