--- a/reverseproxy/nginx.local.conf
+++ b/reverseproxy/nginx.local.conf
@@ -4,7 +4,7 @@ events {
 
 http {
     upstream frontend {
-        server web:5173;
+        server static-builder:5173;
     }
 
     upstream backend {
@@ -20,6 +20,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
 
         location /api/ {
