update local nginx conf

--- a/reverseproxy/nginx.local.conf
+++ b/reverseproxy/nginx.local.conf
@@ -1,8 +1,20 @@
+worker_processes 1;
+
+user nobody nogroup;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
+
 events {
     worker_connections 1024;
 }
 
 http {
+    server_tokens off; # version情報を隠蔽
+    include mime.types;
+    default_type application/octet-stream;
+    access_log /var/log/nginx/access.log combinedi flush=5s; #5秒ごとに出力
+    sendfile on;
+
     upstream frontend {
         server static-builder:5173;
     }
@@ -30,6 +42,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering off; #リアルタイム性を重視するためbufの中止
+            proxy_ignore_client_abort on; #切断対策
         }
     }
 }
