--- a/.env.sample
+++ b/.env.sample
@@ -6,6 +6,7 @@ DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_PASSWORD=pass
 
+VITE_API_URL=http://localhost
 
 ###############
 # RDBMS SETUP #
