--- a/reverseproxy/nginx.local.conf
+++ b/reverseproxy/nginx.local.conf
@@ -1,10 +1,12 @@
+worker_processes 1;
+
 events {
     worker_connections 1024;
 }
 
 http {
     upstream frontend {
-        server web:5173;
+        server static-builder:5173;
     }
 
     upstream backend {
@@ -20,6 +22,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
 
         location /api/ {
@@ -28,6 +32,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering off; #リアルタイム性を重視するためbufの中止
+            proxy_ignore_client_abort on; #切断対策
         }
     }
 }
