--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      # TODO mount ssl/tls certificate volume
+      - ./reverseproxy/ssl/:/etc/ssl/
       - ./reverseproxy/nginx.conf:/etc/nginx/nginx.conf
     networks:
       - net_pong
