fi x create_tournament_dataset create_ponggame_dataset (#60)
* fi x create_tournament_dataset create_ponggame_dataset

* tournament_id -> tournamnent_id.id

* do migration

* fix CMD

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -96,7 +96,7 @@ FROM development_common AS development_djangoserver
 RUN echo "alias run='python manage.py runserver ${BIND_ADDRESS}:${BIND_PORT}'" >> ~/.bashrc
 
 ENTRYPOINT [ "/trans/entrypoint.sh" ]
-CMD ["sleep", "infinity"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
 
 ##########################
 # development_wsgi stage #
