--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,11 +20,23 @@ services:
 
   static-builder:
     build:
-      context: static-builder/
-      target: build
+      context: ./static-builder/
+      target: development
     container_name: "static-builder"
+    restart: on-failure
+    environment:
+      VITE_API_URL: ${VITE_API_URL}
     volumes:
-      - vol_static_builder:/usr/src/vite
+      - ./static-builder:/usr/src/vite
+    networks:
+      - net_pong
+    healthcheck:
+      test: ["CMD", "curl", "-I", "http://localhost:5173/"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 120s
+    entrypoint: ["sh", "-c", "pnpm config set store-dir /tmp/pnpm/store && pnpm install --frozen-lockfile && pnpm dev"]
 
   reverseproxy:
     container_name: "reverseproxy"
@@ -37,13 +49,13 @@ services:
       - ./reverseproxy/nginx.conf:/etc/nginx/nginx.conf
     networks:
       - net_pong
-    # depends_on:
-    #   api:
-    #     condition: service_healthy
-    #   static-builder:
-    #     condition: service_healthy
-    #   rdbms:
-    #     condition: service_healthy
+    depends_on:
+      api:
+        condition: service_healthy
+      static-builder:
+        condition: service_healthy
+      rdbms:
+        condition: service_healthy
 
   api:
     build:
@@ -78,3 +90,4 @@ volumes:
     name: "vol_rdbms"
   vol_static_builder:
     name: "vol_static_builder"
+
