--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,15 +35,16 @@ services:
     volumes:
       - ./reverseproxy/ssl/:/etc/ssl/
       - ./reverseproxy/nginx.conf:/etc/nginx/nginx.conf
+      - vol_static_builder:/usr/share/nginx/html  # vol_static_builderをマウント
     networks:
       - net_pong
-    # depends_on:
-    #   api:
-    #     condition: service_healthy
-    #   static-builder:
-    #     condition: service_healthy
-    #   rdbms:
-    #     condition: service_healthy
+    depends_on:
+      api:
+        condition: service_healthy
+      rdbms:
+        condition: service_healthy
+      static-builder:
+        condition: service_completed_successfully
 
   api:
     build:
@@ -78,3 +79,4 @@ volumes:
     name: "vol_rdbms"
   vol_static_builder:
     name: "vol_static_builder"
+
