--- a/reverseproxy/nginx.conf
+++ b/reverseproxy/nginx.conf
@@ -15,27 +15,20 @@ http {
     access_log /var/log/nginx/access.log combined flush=5s  buffer=32k; #5秒ごとに出力
     sendfile on;
 
-    upstream frontend {
-        server static-builder:5173;
-    }
-
     upstream backend {
         server api:8000;
     }
 
     server {
         listen 443 ssl;
-        ssl_certificate /etc/ssl/ca-certificates.crt
-        ssl_certificate_key /etc/ssl/ca-certificates.key
+        ssl_certificate /etc/ssl/ca-certificates.crt;
+        ssl_certificate_key /etc/ssl/ca-certificates.key;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            proxy_pass http://frontend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            root /usr/share/nginx/html/dist;
+            index index.html;
         }
 
         location /api/ {
@@ -51,7 +44,6 @@ http {
         location ~ /\.$ {
             deny all;
         }
-
     }
 
     server {
