--- a/reverseproxy/nginx.conf
+++ b/reverseproxy/nginx.conf
@@ -29,6 +29,7 @@ http {
         location / {
             root /usr/share/nginx/html/dist;
             index index.html;
+            try_files $uri $uri/ /index.html;
         }
 
         location /api/ {
@@ -51,4 +52,3 @@ http {
         return 301 https://$host$request_uri;
     }
 }
-
