--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     build:
       context: static-builder/
       target: build
+      args:
+        - VITE_API_URL
     container_name: "static-builder"
     volumes:
       - vol_static_builder:/usr/src/vite
