--- a/asyncapi.yaml
+++ b/asyncapi.yaml
@@ -1,114 +1,57 @@
-asyncapi: 3.0.0
+---
+asyncapi: 2.1.0
 info:
   title: ft_transcendence
   version: 1.0.0
   description: This API is designed for a pong game.
-
+servers:
+  localhost:
+    url: 'ws://localhost/api/ws'
+    protocol: ws
 channels:
-  match:
-    address: /api/ws/matches
-    messages:
-      MatchSend:
-        $ref: '#/components/messages/MatchSend'
-      MatchStateUpdate:
-        $ref: '#/components/messages/MatchStateUpdate'
-      MatchGoalUpdate:
-        $ref: '#/components/messages/MatchGoalUpdate'
-
-operations:
-  sendMatchInput:
-    action: send
-    channel:
-      $ref: '#/channels/match'
-    messages:
-      - $ref: '#/channels/match/messages/MatchSend'
-      
-  receiveMatchState:
-    action: receive
-    channel:
-      $ref: '#/channels/match'
-    messages:
-      - $ref: '#/channels/match/messages/MatchStateUpdate'
-
-  receiveMatchGoal:
-    action: receive
-    channel:
-      $ref: '#/channels/match'
-    messages:
-      - $ref: '#/channels/match/messages/MatchGoalUpdate'
+  /api/ws/matches:
+    publish:
+      operationId: sendKeyInput
+      message:
+        $ref: '#/components/messages/KeyInput'
+    subscribe:
+      operationId: onMatchStatus
+      message:
+        $ref: '#/components/messages/MatchStatus'
 
 components:
   messages:
-    MatchSend:  # フロント -> バックへのキーボード入力
+    KeyInput:
       payload:
         type: object
-        required:
-          - upDownKey
         properties:
-          upDownKey:
-            $ref: '#/components/schemas/UpDownKey'
-
-    MatchStateUpdate: # バック -> フロント ゲーム状態の更新
+          left:
+            $ref: '#/components/schemas/KeyInput'
+          right:
+            $ref: '#/components/schemas/KeyInput'
+    MatchStatus:
       payload:
         type: object
         required:
-          - paddlePositions
+          - left
+          - right
           - ballPosition
         properties:
-          paddlePositions:
-            $ref: '#/components/schemas/PaddlePositions'
-          ballPosition:
-            $ref: '#/components/schemas/BallPosition'
-
-    MatchGoalUpdate: # バック -> フロント 得点が入ったときの処理
-      payload:
-        type: object
-        required:
-          - scores
-          - paddlePositions
-          - ballPosition
-        properties:
-          scores:
-            $ref: '#/components/schemas/Scores'
-          paddlePositions:
-            $ref: '#/components/schemas/PaddlePositions'
+          left:
+            $ref: '#/components/schemas/PlayerStatus'
+          right:
+            $ref: '#/components/schemas/PlayerStatus'
           ballPosition:
             $ref: '#/components/schemas/BallPosition'
 
   schemas:
-    UpDownKey:
-      description: "True indicates that the paddle is moving up, while false indicates that the paddle is moving down."
-      type: array
-      minItems: 1
-      maxItems: 2
-      items:
-        type: object
-        required:
-          - userId
-          - upDownKey
-        properties:
-          userId:
-            type: string
-          upDownKey:
-            type: boolean
-
-    PaddlePositions:
-      description: Vertical position of player's paddles for both players
-      type: array
-      minItems: 2
-      maxItems: 2
-      items:
-        type: object
-        required:
-          - userId
-          - paddlePosition
-        properties:
-          userId:
-            type: string
-          paddlePosition:
-            type: number
-            format: float
-
+    KeyInput:
+      type: object
+      required:
+        - isUp
+      properties:
+        isUp:
+          type: boolean
     BallPosition:
       type: object
       required:
@@ -117,26 +60,16 @@ components:
       properties:
         x:
           type: number
-          format: float
-          description: Horizontal position of the ball
-        y:
+          format: floa
+    PlayerStatus:
+      type: object
+      required:
+        - paddlePosition
+        - score
+      properties:
+        paddlePosition:
           type: number
           format: float
-          description: Vertical position of the ball
-
-    Scores:
-      description: Current scores of both players
-      type: array
-      minItems: 2
-      maxItems: 2
-      items:
-        type: object
-        required:
-          - userId
-          - score
-        properties:
-          userId:
-            type: string
-          score:
-            type: integer
+        score:
+          type: integer
 
