add: apiの送信回数を減らすためにkeyInputの追加

--- a/asyncapi.yaml
+++ b/asyncapi.yaml
@@ -63,8 +63,11 @@ components:
       type: object
       required:
         - isUp
+        - keyInput
       properties:
         isUp:
+          type: boolean
+        keyInput:
           type: boolean
     BallPosition:
       type: object
