--- a/api/dev/docker-compose.yml
+++ b/api/dev/docker-compose.yml
@@ -22,6 +22,7 @@ services:
         condition: service_healthy
       in_memory_db:
         condition: service_healthy
+    container_name: "dev-api"
 
   rdbms:
     image: postgres:latest
@@ -37,6 +38,7 @@ services:
       test: ["CMD-SHELL", "pg_isready -U pong_user"]
       interval: 15s
       retries: 5
+    container_name: "dev-rdbms"
 
   in_memory_db:
     image: redis:latest
@@ -46,6 +48,7 @@ services:
       test: ["CMD-SHELL", "redis-cli ping"]
       interval: 15s
       retries: 5
+    container_name: "dev-redis"
 
 volumes:
   postgres_data:
