--- a/asyncapi.yaml
+++ b/asyncapi.yaml
@@ -62,13 +62,19 @@ components:
     KeyInput:
       type: object
       required:
-        - isUp
-        - keyInput
+        - key
+        - action
       properties:
-        isUp:
-          type: boolean
-        keyInput:
-          type: boolean
+        key:
+          type: string
+          enum:
+            - PaddleUpKey
+            - PaddleDownKey
+        action:
+          type: string
+          enum:
+            - push
+            - release
     BallPosition:
       type: object
       required:
