ELKコンテナの基本を作成

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,59 @@ services:
       interval: 5s
       retries: 5
 
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.15.2
+    container_name: "elasticsearch"
+    environment:
+      discovery.type: single-node
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9200"]
+      interval: 30s
+      timeout: 5s
+      retries: 5
+    networks:
+      - net_pong
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.15.2
+    container_name: "kibana"
+    environment:
+      ELASTICSEARCH_HOSTS: "http://elasticsearch:9200"
+    ports:
+      - "5601:5601"
+    networks:
+      - net_pong
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
+
+  logstash:
+    image: docker.elastic.co/logstash/logstash:7.15.2
+    container_name: "logstash"
+    volumes:
+      - ./logstash/pipeline/:/usr/share/logstash/pipeline/
+    environment:
+      ELASTICSEARCH_HOST: "elasticsearch"
+      ELASTICSEARCH_PORT: "9200"
+    networks:
+      - net_pong
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
+
+  filebeat:
+    image: docker.elastic.co/beats/filebeat:7.15.2
+    container_name: "filebeat"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - ./filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml
+    networks:
+      - net_pong
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
+
 networks:
   net_pong:
     name: "net_pong"
